--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -31,6 +31,12 @@ jobs:
           --health-retries=5
 
     steps:
+      - name: Установка зависимостей
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install httpx
+        
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -51,4 +57,4 @@ jobs:
 
       - name: Run tests
         run: |
-          pytest samDeLaL.py test_prod.py
+          pytest test_prod.py
