--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -2,28 +2,36 @@ name: Test and Build
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
+    tags: [ "v*" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout репозитория
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r app/requirements.txt
+          pip install pytest httpx
+      - name: Create static directory
+        run: mkdir -p app/static && touch app/static/index.html
+      - name: Run tests
+        run: pytest app/test_prod.py -v
 
-    - name: Установка Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
 
-    - name: Установка зависимостей
-      run: |
-        python -m pip install --upgrade pip
-        pip install fastapi pytest httpx
-
-    - name: Запуск тестов
-      run: |
-        pytest samDeLaL.py test_prod.py
+  build:
+    needs: test
+    if: success()
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build Docker image
+        run: docker build -t fastapi-app .
