--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -21,10 +21,11 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest httpx
-      - name: Create static directory
-        run: mkdir -p static && touch static/index.html
+      # - name: Create static directory
+      #   run: mkdir -p static && touch static/index.html
       - name: Run tests
-        run: pytest test_prod.py -v
+        run: |
+          pytest test_prod.py
 
 
   build:
